# finsolve-abac-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.chroma_db/: chroma.sqlite3
.github/workflows/: ci.yml  deploy-cloudrun.yml
app/: main.py
app/hr/: csv_service.py
app/ingest/: allow_roles.py  chunker.py  dense_indexer.py  discovery.py  runner.py
app/policy/: pdp.py
app/retrieval/: bm25.py  filtering.py  hybrid.py  rerank.py  search.py
app/routes/: __init__.py  admin.py  auth.py  chat.py  deps.py  hr.py  search.py
app/services/: cache.py  embed_backend.py  embeddings.py  generation.py  llm_backend.py  multihop.py  openai_client.py  providers.py  reranker_openai.py
app/utils/: audit.py  config.py  rate_limit.py
app/vectorstore/: chroma_store.py
docs/: ARCHITECTURE.md  SELF_HOSTED_SETUP.md  final_plan.md  ingestion_plan.md  metadata_schema.yaml  policy.yaml
scripts/: benchmark_inference.py  start_vllm.sh
static/: app.js  style.css
templates/: chat.html
tests/: conftest.py  test_app_authz.py  test_chat_api.py  test_chunker.py  test_dense_search_api.py  test_e2e_samples.py  test_hr_masked_rows.py  test_hybrid_search_api.py  test_ingest.py  test_ingest_runner.py  test_llm_reranker.py  test_multihop.py  test_openai_reranker.py  test_pdp.py  test_providers.py  test_retrieval_filtering.py  test_search_api.py
