[project]
name = "ds-rpc-01"
version = "0.1.0"
description = "Starter project for the RPC-01: Internal Chatbot with Role Based Access Control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "openai>=1.40.0",
    "chromadb>=0.5.4",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]
